Update fix for alignment of icons
fix alignment of the page icons

--- a/Koderz123/src/MainMenuComponents/MainMenu.css
+++ b/Koderz123/src/MainMenuComponents/MainMenu.css
@@ -7,7 +7,9 @@
     height: 100vh;
     display: flex;
     align-items: center;             
-    justify-content: center;        
+    justify-content: center; 
+    flex-direction: column;
+
   }
   
   h1 {
